# OpenArmLab

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pixi.toml  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  proposal.md  question.md
scripts/: 01_create_env.py
source/openarmlab/: setup.py
source/openarmlab/config/: extension.toml
source/openarmlab/docs/: README.md
source/openarmlab/openarmlab/tasks/: base_bimanual_task.py  base_unimanual_task.py
source/openarmlab/openarmlab/tasks/stack_three_cubes/: stack_three_cubes_bi_env_cfg.py  stack_three_cubes_uni_env_cfg.py
source/openarmlab/openarmlab/tasks/stack_three_cubes/config/: __init__.py
source/openarmlab/openarmlab/tasks/stack_three_cubes/config/agents/: rl_games_ppo_bi_cfg.yaml  rl_games_ppo_uni_cfg.yaml
source/openarmlab/openarmlab/tasks/stack_three_cubes/mdp/: __init__.py
