[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ---------------- Project Configurations ----------------
[project.urls]
homepage = "https://github.com/makolon/OpenArmLab"
repository = "https://github.com/makolon/OpenArmLab"
documentation = "https://github.com/makolon/OpenArmLab/readme"
issues = "https://github.com/makolon/OpenArmLab/issues"

[project]
name = "OpenArmLab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Image processing
    "imageio[ffmpeg]>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "pillow>=11.2.1",
    # Configurations
    "tyro>=0.8.8",
    # Data processing
    "matplotlib>=3.10.0",
    "pyyaml>=6.0.2",
    # Visualization
    "tqdm>=4.67.1",
    "viser>=0.2.11",
    # Computer vision
    "opencv-python>=4.11.0.86",
    # PyTorch
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "torchmetrics[image]>=1.8.2",
    # IsaacLab
    "isaaclab[isaacsim,all]==2.3.1",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "tensorly>=0.9.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]


# ---------------- Tool Configurations ----------------
[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # `zip()` without an explicit `strict=` parameter
    "SIM108", # Use ternary operator instead of if-else block
]

[tool.ruff.lint.isort]
known-first-party = ["openarmlab"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
